--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build-app-docker-image:
+  build-app-docker-image-amd64:
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
@@ -29,13 +29,53 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
-          key: service-${{ runner.os }}-buildx-cache
+          key: service-${{ runner.os }}-buildx-cache-amd64
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:app"
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+          push: true
+          tags: |
+            ghcr.io/thomas-god/parcelec-app:latest
+            ghcr.io/thomas-god/parcelec-app:${{ github.sha }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      # Move the new cache to the original location
+      - name: Move cache to original location
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+  build-app-docker-image-arm64:
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: https://ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Cache the Cargo dependencies to speed up the build
+      - uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: service-${{ runner.os }}-buildx-cache-arm64
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: "{{defaultContext}}:app"
+          platforms: linux/arm64
           push: true
           tags: |
             ghcr.io/thomas-god/parcelec-app:latest
