--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -9,8 +9,19 @@ on:
       - main
 
 jobs:
-  build-app-docker-image-amd64:
-    runs-on: ubuntu-latest
+  build-app-docker-image:
+    strategy:
+      matrix:
+        include:
+          - arch: amd64
+            runs_on: ubuntu-24.04
+            platform: linux/amd64
+            cache_key: service-amd64-buildx-cache
+          - arch: arm64
+            runs_on: ubuntu-24.04-arm
+            platform: linux/arm64
+            cache_key: service-arm64-buildx-cache
+    runs-on: ${{ matrix.runs_on }}
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -25,17 +36,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Cache the Cargo dependencies to speed up the build
-      - uses: actions/cache@v4
+      - name: Cache the Cargo dependencies
+        uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
-          key: service-${{ runner.os }}-buildx-cache-amd64
+          key: ${{ matrix.cache_key }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:app"
-          platforms: linux/amd64
+          platforms: ${{ matrix.platform }}
           push: true
           tags: |
             ghcr.io/thomas-god/parcelec-app:latest
@@ -43,47 +54,6 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-      # Move the new cache to the original location
-      - name: Move cache to original location
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-  build-app-docker-image-arm64:
-    runs-on: ubuntu-24.04-arm
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: https://ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      # Cache the Cargo dependencies to speed up the build
-      - uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: service-${{ runner.os }}-buildx-cache-arm64
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: "{{defaultContext}}:app"
-          platforms: linux/arm64
-          push: true
-          tags: |
-            ghcr.io/thomas-god/parcelec-app:latest
-            ghcr.io/thomas-god/parcelec-app:${{ github.sha }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-
-      # Move the new cache to the original location
       - name: Move cache to original location
         run: |
           rm -rf /tmp/.buildx-cache
