--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
-name: App and client tests
+name: App, client and e2e tests
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   app-test:
@@ -23,10 +23,50 @@ jobs:
       run:
         working-directory: ./client
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js 22.x
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22.x
-    - run: npm ci
-    - run: npm run test:ci
+      - uses: actions/checkout@v4
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+      - run: npm ci
+      - run: npm run test:ci
+
+  e2e-test:
+    name: end-to-end tests between app and client
+    runs-on: ubuntu-latest
+    needs: [app-test, client-test]
+    steps:
+      - uses: actions/checkout@v4
+
+      # Build client first
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+      - name: Install and build client
+        working-directory: ./client
+        run: |
+          npm ci
+          npm run build
+
+      # Install Firefox and geckodriver
+      - name: Setup Firefox
+        uses: browser-actions/setup-firefox@v1
+      - name: Setup geckodriver
+        uses: browser-actions/setup-geckodriver@latest
+      - name: Start geckodriver
+        run: |
+          geckodriver --version
+          geckodriver &
+          # Wait for geckodriver to start
+          sleep 2
+          # Verify geckodriver is running
+          curl -s http://localhost:4444/status || (echo "Geckodriver not running"; exit 1)
+          echo "Geckodriver started successfully"
+
+      # Run the end-to-end tests
+      - name: Run end-to-end tests
+        working-directory: ./app
+        run: |
+          export PATH=$PATH:/home/runner/geckodriver
+          cargo test --features e2e-tests
