--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -30,3 +30,6 @@ scraper = "0.23.1"
 tokio-tungstenite = "0.26.2"
 tower = { version = "0.5.2", features = ["util"] }
 tower-http = { version = "0.6.2", features = ["fs"] }
+
+[features]
+e2e-tests = []
