--- a/docker-stack.yaml
+++ b/docker-stack.yaml
@@ -35,6 +35,7 @@ services:
       - "traefik.http.routers.parcelec.rule=Host(`parcelec.org`) && PathPrefix(`/api`)"
       - "traefik.http.routers.parcelec.entrypoints=websecure"
       - "traefik.http.routers.parcelec.tls.certresolver=myresolver"
+      - "traefik.docker.network=traefik-public"
     networks:
       - traefik-public
     deploy:
@@ -49,6 +50,7 @@ services:
       - "traefik.http.routers.client.rule=Host(`parcelec.org`)"
       - "traefik.http.routers.client.entrypoints=websecure"
       - "traefik.http.routers.client.tls.certresolver=myresolver"
+      - "traefik.docker.network=traefik-public"
     networks:
       - traefik-public
 
